<resources>
    <string name="app_name">Boggle</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_board">Boggle</string>

    <!-- Main Menu -->
    <string name="menu_main_single_player"> Single Player</string>
    <string name="menu_main_multiplayer">Multiplayer</string>
    <string name="menu_main_high_scores">High Scores</string>
    <string name="menu_main_credits">Credits</string>

    <string name="menu_back">Back</string>
    <string name="menu_back_to_main">Back to Main Menu</string>
    <string name="menu_credits_header">Developers:</string>

    <!-- Multiplayer Menu -->
    <string name="menu_multiplayer_header">Select multiplayer mode:</string>
    <string name="menu_multiplayer_basic">Basic</string>
    <string name="menu_multiplayer_cutthroat">Cutthroat</string>
    <string name="menu_multiplayer_multi_round">Multi-round</string>
    <string name="menu_multiplayer_multi_round_cutthroat">Multi-round Cutthroat</string>
    <string name="menu_multiplayer_info">More Info</string>

    <string name="title_activity_game_board2_player">GameBoard2Player</string>
    <string name="title_activity_single_player">SinglePlayer</string>
    <string name="high_scores">High Scores</string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="title_activity_device_list">DeviceListActivity</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_client_server">ClientServer</string>
    <string name="title_activity_two_player_scores">TwoPlayerScoresActivity</string>
    <string name="title_activity_multiplayer_menu">MultiplayerMenuActivity</string>
    <string name="title_activity_board_test">BoardTestActivity</string>
    <string name="title_activity_two_player_multi_round">TwoPlayerMultiRound</string>

    <!-- Game -->
    <string name="score_lbl">Score</string>
    <string name="score_opp_lbl">Opp</string>
    <string name="round_lbl">Round</string>
    <string name="menu_connect">Connect to Device</string>
    <string name="menu_end_round">End Round</string>

    <!-- Score screens, single and multiplayer -->
    <string name="yourScore">Score: </string>
    <string name="high_scores_lbl">High Scores</string>
    <string name="words_found_lbl">Words Found</string>
    <string name="words_not_found_lbl">Not Found</string>
    <string name="you_lbl">You</string>
    <string name="opp_lbl">Opponent</string>
</resources>
