<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team1.cs410.boggle.TwoPlayerScoresActivity"
    tools:showIn="@layout/activity_two_player_scores" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gradient_background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <!-- Titles -->
                <TextView
                    android:id="@+id/winner"
                    style="@style/scores_header"
                    android:text="You Win!"
                    android:textSize="40dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp">

                    <TextView
                        android:id="@+id/you_lbl"
                        style="@style/scores_header"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="0dp"
                        android:text="@string/you_lbl" />

                    <TextView
                        android:id="@+id/opp_lbl"
                        style="@style/scores_header"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="0dp"
                        android:text="@string/opp_lbl" />

                </LinearLayout>

                <!-- Scores -->
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/you_score_lbl"
                        style="@style/scores_info"
                        android:layout_marginTop="0dp"
                        android:text="@string/score_lbl" />

                    <TextView
                        android:id="@+id/you_score"
                        style="@style/scores_info"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="0dp"
                        android:text="0" />

                    <TextView
                        android:id="@+id/opp_score_lbl"
                        style="@style/scores_info"
                        android:layout_marginTop="0dp"
                        android:text="@string/score_lbl" />

                    <TextView
                        android:id="@+id/opp_score"
                        style="@style/scores_info"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="0dp"
                        android:text="0" />

                </LinearLayout>

                <!-- Words found -->
                <TextView
                    android:id="@+id/words_found_lbl"
                    style="@style/scores_header"
                    android:text="@string/words_found_lbl" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/you_words_found"
                        style="@style/scores_info"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="..." />

                    <TextView
                        android:id="@+id/opp_words_found"
                        style="@style/scores_info"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="..." />

                </LinearLayout>

                <!-- Words not found -->
                <TextView
                    android:id="@+id/words_not_found_lbl"
                    style="@style/scores_header"
                    android:text="@string/words_not_found_lbl" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/words_not_found"
                        style="@style/scores_info"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="..." />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/menu_back"
            style="@style/menu_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu_back_to_main"/>

    </LinearLayout>

</RelativeLayout>

