<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team1.cs410.boggle.TwoPlayerActivity"
    tools:showIn="@layout/activity_two_player" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/gradient_background"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- Game information -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/score_lbl"
                style="@style/game_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/score_lbl" />
            <TextView
                android:id="@+id/score"
                style="@style/game_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:gravity="left"
                android:text="0" />
            <TextView
                android:id="@+id/score_lbl_opp"
                style="@style/game_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/score_opp_lbl" />
            <TextView
                android:id="@+id/score_opp"
                style="@style/game_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="8dp"
                android:text="0" />
            <TextView
                android:id="@+id/timer"
                style="@style/game_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3:00" />

        </LinearLayout>

        <!-- Your word -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <TextView
                android:id="@+id/input_word"
                style="@style/game_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="32dp" />

        </LinearLayout>

        <!-- Wrapper for game board -->
        <LinearLayout
            android:id="@+id/game_board_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/menu_connect"
            style="@style/game_options"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/menu_connect" />

    </LinearLayout>

</RelativeLayout>
